--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -1,7 +1,23 @@
-.div{
+.mainDiv{
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
+.div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.title{
+  font-family: 'Roboto', Courier, monospace;
+  font-size: 3rem;
+  margin-bottom: 10vh;
+  color: #1A5319;
+}
+
